--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </a>
     
     </center>
-    <A href="">
+    <A href="https://thesexymonkey.github.io/LightTimetable/">
         <button style="background-color:lightgray">Light mode</button>
     </A>
 </body>
